--- a/CSS/contact-us.css
+++ b/CSS/contact-us.css
@@ -9,16 +9,19 @@
 
 #header{
   background-image:url('../Images/Contact-Us/Heroimage-transformed.jpeg');
-  background-color: gray;
+  background-color: var(--bg-main);
   background-size: cover;
   background-position: center;
   background-blend-mode:multiply;
+  color: var(--text-main);
 }
 .hero-content{
   justify-content: center;
+  background:none;
 }
 .contact-us{
   font-size: var(--fs-2xl);
+  color: var(--item-gold);
 }
 
 
@@ -27,7 +30,7 @@
   gap:var(--fs-2xl)
 }
 .contact-title{
-  color: white;
+  color: var(--item-gold);
   font-size: var(--fs-lg);
 }
 .contact-method{
@@ -37,7 +40,7 @@
   gap:1rem;
 }
 .contact-icon{
-  color:white;
+  color:var(--item-gold);
   font-size: var(--fs-lg);
 }
 
