--- a/CSS/Color-Button-Smaller.css
+++ b/CSS/Color-Button-Smaller.css
@@ -1,10 +1,8 @@
-
-
 .call-to-action-smaller{
   text-align: center;
   position: absolute;
-  background: #fff;
-  color: #fff;
+  background: var(--item-accent);
+  color: var(--text-main);
   text-transform: uppercase;
   font-size: 1em;
   letter-spacing:0.1em;
@@ -16,17 +14,17 @@
 }
 .call-to-action-smaller:hover 
 {
-  background: var(--clr);
-  color: var(--clr) ;
+  background:var(--text-main);
+  color: var(--text-main);
   letter-spacing: 0.2em; 
-  box-shadow: 0 0 35px var(--clr);
+  box-shadow: 0 0 35px var(--text-main);
 }
 
 .call-to-action-smaller:before{
   content:"";
   position: absolute;
   inset:2px;
-  background:#27282c ;
+  background: var(--bg-secondary);
 }
 .call-to-action-smaller span {
   position: relative;
@@ -44,11 +42,9 @@
   left: 80%;
   width:10px;
   height:4px;
-  background: #27282c;
+  background: var(--item-accent);
   transform: translateX(50%)skewX(325deg);
   transition: 0.5s;
-
-
 }
 .call-to-action-smaller:hover i::before{
   width: 20px;
@@ -61,11 +57,9 @@
   left: 20%;
   width:10px;
   height:4px;
-  background: #27282c;
+  background: var(--item-accent);
   transform: translateX(50%)skewX(325deg);
   transition: 0.5s;
-
-
 }
 .call-to-action-smaller:hover i::after{
   width: 20px;
