--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -9,6 +9,8 @@
   }
     header ,section ,footer{
       padding:3rem 9rem 9rem;
+      background-color: var(--bg-main);
+      color: var(--text-main);
     }
     i.fa-solid.fa-bars {
       display: none;
@@ -26,7 +28,7 @@
       width:90rem;
     }
     .card .face1 {
-      background-color: #ff1867;
+      background-color: var(--item-accent);
       transform: translateY(0);
       box-shadow: none;
       height:35rem;
@@ -120,6 +122,8 @@
     }
     header, section ,footer{
       padding: 3rem;
+      background-color: var(--bg-main);
+      color: var(--text-main);
     }
     .cards-container {
       gap: var(--fs-sm);
@@ -135,7 +139,7 @@
     }
 
     .card .face1 {
-      background-color:#27282c;
+      background-color: var(--bg-main);
       transform: translateY(50%);
       box-shadow: 0px 10px 10px #27282c;
       height: none;
@@ -218,6 +222,8 @@
   section,header,footer{
     padding: 3rem ;
     min-height: auto;
+    background-color: var(--bg-main);
+    color: var(--text-main);
   }
   header{
     flex-direction: column;
@@ -278,7 +284,7 @@
     border-radius: 1rem;
   }
   .card .face1 {
-    background-color: #ff1867;
+    background-color: var(--item-accent);
     transform: translateY(0);
     box-shadow: none;
     height:17rem;
@@ -444,7 +450,13 @@
   .visit-us article div iframe{
     width:100%;
     height: 400px;
-}
+  }
+
+  .contact-methods{
+    flex-direction: column;
+
+  }
+
 }
 
 @media(max-width:650px){
@@ -500,9 +512,12 @@
 @media(max-width:445px){
   section{
     padding: 2rem;
+    background-color: var(--bg-main);
+    color: var(--text-main);
   }
   .card{
     width:100% ;
+    
   }
   .card .face{
     height:30rem ;
@@ -554,6 +569,8 @@
 @media(max-width:330px){
   section{
     padding: 1rem;
+    background-color: var(--bg-main);
+    color: var(--text-main);
   }
   
   .card .face{
