--- a/CSS/blogs/our-benefits.css
+++ b/CSS/blogs/our-benefits.css
@@ -7,7 +7,8 @@
   justify-content: left;
 }
 .carousel-slide-content {
-  width: 25%;
+  display:flex;
+  flex-direction: row;
 }
 .carousel-slide-content img {
   max-height: 200px;
