--- a/CSS/blogs/our-benefits.css
+++ b/CSS/blogs/our-benefits.css
@@ -1,14 +1,11 @@
 .carousel{
   width:100%;
 }
-
-.slide{
-  display: flex;
-  justify-content: left;
-}
-.carousel-slide-content {
+.slide > span.carousel-slide-content {
   display:flex;
   flex-direction: row;
+  width: auto;
+  height: auto;
 }
 .carousel-slide-content img {
   max-height: 200px;
