Add missing closing brace and newline in our-benefits carousel styles for improved formatting

--- a/CSS/blogs/our-benefits.css
+++ b/CSS/blogs/our-benefits.css
@@ -9,3 +9,9 @@
   width: 50%;
   height: 100px;
 }
+.card-icon{
+  top:90%;
+}
+.our-benefits-features-carousel__content ul{
+  padding:var(--fs-xs) var(--fs-xl)
+}
