Refactor carousel classes for improved clarity and structure

--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -367,10 +367,10 @@
 
 
 
-  .slides-desktop{
+  .desktop.carousel{
     display: none;
   }
-  .slides-mobile{
+  .mobile.carousel{
     display: flex;
   }
   
