--- a/CSS/blogs/our-benefits.css
+++ b/CSS/blogs/our-benefits.css
@@ -21,3 +21,10 @@
 .our-benefits-features-carousel__content ul{
   padding:var(--fs-xs) var(--fs-xl)
 }
+.our-benefits-features-carousel__content .carousel .slide .carousel-slide-content {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
