--- a/CSS/index.css
+++ b/CSS/index.css
@@ -393,8 +393,12 @@ img.testimony-client-photo{
   flex-direction: column;
   gap: var(--fs-sm);
 }
+.slide{
+  z-index: -999;
+}
 .slide[data-active]{
   opacity:1;
+  z-index: 0;
 }
 .button{
   position: absolute;
@@ -407,6 +411,7 @@ img.testimony-client-photo{
   transform: translateY(-50%);
   padding: 0.5rem;
   cursor: pointer;
+  z-index: 1;
 }
 .button:hover,
 .button:focus{
