--- a/CSS/blogs/our-benefits.css
+++ b/CSS/blogs/our-benefits.css
@@ -18,7 +18,7 @@
 }
 .slide{
   display: grid;
-  grid-gap: var(--fs-sm);
+  grid-gap: var(--fs-xs);
   grid-auto-flow: column;
 }
 .slide > .carousel-slide-content{
@@ -41,4 +41,5 @@
 .our-benefits-features-carousel__content .carousel .slide .carousel-slide-content {
   display: flex;
   gap:var(--fs-xs);
+  width: 94%;
 }
