Refactor features carousel layout and adjust main section padding for improved styling

--- a/CSS/blogs/our-benefits.css
+++ b/CSS/blogs/our-benefits.css
@@ -1,3 +1,7 @@
+
+.features-carousel {
+  flex-direction:column;
+}
 .section-headline {
   background-color: var(--bg-main);
 }
@@ -46,4 +50,8 @@
 
 .blog-post article{
   flex-direction: column;
+}
+
+main section{
+  padding:var(--fs-sm)15rem;
 }
