Enhance blog post layout with improved styling and structure for better readability

--- a/CSS/blogs/our-benefits.css
+++ b/CSS/blogs/our-benefits.css
@@ -50,8 +50,17 @@
 
 .blog-post article{
   flex-direction: column;
+  gap: var(--fs-xs);
+  font-size: var(--fs-md);
 }
 
 main section{
   padding:var(--fs-sm)15rem;
+  align-items: start;
+}
+p{
+  font-size: var(--fs-md);
+}
+h2{
+  font-size: var(--fs-lg);
 }
