--- a/CSS/index.css
+++ b/CSS/index.css
@@ -62,6 +62,8 @@ html , body{
   --text-inverse: #130909;
   --text-muted: #bba9a9;
 
+
+  --fs-padding:15rem;
   --fs-2xl: 4.5rem;
   --fs-xl: 4rem;
   --fs-lg: 3.5rem;
