--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -9,11 +9,14 @@
 
 .catalogue__categories{
   width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
   display: grid;
   justify-content: center;
   align-items: stretch; 
-  gap:var(--fs-2xl);
-  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+  gap: var(--fs-sm); 
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  box-sizing: border-box;
 }
 
 .catalogue__card {
@@ -23,18 +26,14 @@
   background: var(--bg-main);
   color: var(--text-main);
   gap:var(--fs-xs);
-  opacity:0.4;
-}
-.catalogue__card:hover{
-  opacity:1;
-  transition:1s;
+  box-sizing: border-box;
 }
 span.card-content-container {
     font-size: var(--fs-xs);
     display: flex;
     flex-direction: column;
     gap: var(--fs-xs);
-    flex: 1 1 auto; /* Ocupa todo el espacio disponible */
+    flex: 1 1 auto; 
 }
 
 .catalogue__card:hover .call-to-action{
@@ -51,6 +50,6 @@ span.card-content-container {
 }
 .catalogue img {
   width: 100%;
-  height: 500px;
-  object-fit: cover;
+  height: 200px;
+  
 }
