--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -13,7 +13,6 @@
   margin: 0 auto;
   display: grid;
   justify-content: center;
-  align-items: stretch; 
   gap: var(--fs-sm); 
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   box-sizing: border-box;
@@ -22,11 +21,10 @@
 .catalogue__card {
   display: flex;
   flex-direction: column;
-  height: 100%; 
   background: var(--bg-main);
   color: var(--text-main);
   gap:var(--fs-xs);
-  box-sizing: border-box;
+  height: 35rem;
 }
 span.card-content-container {
     font-size: var(--fs-xs);
@@ -34,6 +32,7 @@ span.card-content-container {
     flex-direction: column;
     gap: var(--fs-xs);
     flex: 1 1 auto; 
+    height: 100%;
 }
 
 .catalogue__card:hover .call-to-action{
@@ -47,9 +46,10 @@ span.card-content-container {
   align-items: center;
   justify-content: center;
   margin-top: auto; 
+  flex: 1;
 }
 .catalogue img {
   width: 100%;
   height: 200px;
-  
+
 }
