--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -24,18 +24,11 @@
   background: var(--bg-main);
   color: var(--text-main);
   gap:var(--fs-xs);
-  height: 30rem;
-}
-span.card-content-container {
-    font-size: var(--fs-xs);
-    display: flex;
-    flex-direction: column;
-    gap: var(--fs-xs);
-    flex: 1 1 auto; 
-    height: 100%;
+  height: 35rem;
+  font-size: var(--fs-xs);
 }
 
-.catalogue__card:hover .call-to-action{
+.call-to-action:hover{
   background: var(--item-accent);
   color: var(--item-gold) ;
   letter-spacing: 0.2em; 
@@ -51,5 +44,7 @@ span.card-content-container {
 .catalogue img {
   width: 100%;
   height: 200px;
-
+}
+a{
+  margin-top: auto;
 }
