--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -504,6 +504,9 @@
   section.proof.four,.section-headline{
     text-align: center;
   }
+  img.testimony-client-photo{
+    width: 25%;
+  }
   .index-features-carousel__content .carousel{
     min-height: 50rem;
   }
@@ -621,6 +624,9 @@
     flex-direction: column;
     gap: var(--fs-lg);
   }
+  img.testimony-client-photo{
+    width: 40%;
+  }
   .index-features-carousel__content .carousel{
     min-height:55rem;
   }
@@ -676,6 +682,9 @@
   }
   .card .face1{
     height: 15rem;
+  }
+  img.testimony-client-photo{
+    width: 45%;
   }
   img.footer-logo{
     width:20rem;
